k8s/smtp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp
  template:
    metadata:
      labels:
        app: smtp
    spec:
      containers:
        - name: smtp
          image: namshi/smtp:latest
          ports:
            - containerPort: 25
---
apiVersion: v1
kind: Service
metadata:
  name: smtp
  labels:
    app: smtp
spec:
  type: NodePort
  ports:
   - port: 25
  selector:
   app: smtp
