k8s/websocket.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket
  template:
    metadata:
      labels:
        app: websocket
    spec:
      containers:
        - name: websocket
          image: brdgme/websocket:v1.36.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: websocket
  labels:
    app: websocket
spec:
  type: NodePort
  ports:
   - port: 80
  selector:
   app: websocket
