k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: brdgme-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "604800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "604800"
spec:
  rules:
  - http:
      paths:
      - path: /()(.*)
        pathType: Prefix
        backend:
          serviceName: web
          servicePort: 80
      - path: /ws(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: websocket
          servicePort: 80
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: api
          servicePort: 8000
